--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -42,7 +42,14 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.17</version>
         </dependency>
-        
+
+        <!-- https://mvnrepository.com/artifact/cn.hutool/hutool-all -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.1.0</version>
+        </dependency>
+
         <dependency>
             <groupId>com.yhhl.ebo</groupId>
             <artifactId>ebo-common</artifactId>
